<resources>
    <string name="Female">She</string>
    <string name="Male">He</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_your_loop">About your Loop</string>
    <string name="account">Account</string>
    <string name="account_activation_success">Account confirmed</string>
    <string name="account_not_found_edit">Edit</string>
    <string name="account_not_found_new_account">New Account</string>
    <string name="account_not_found_text">"We couldn't find a Jibo account with this email. Would you like to create a new account or use a different email address?"</string>
    <string name="account_not_found_title">Account Not Found</string>
    <string name="account_type">com.jibo</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_help">HELP</string>
    <string name="action_next">Next</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_skip">SKIP</string>
    <string name="action_support">SUPPORT</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="add_preferred_name">Add Preferred Name</string>
    <string name="age_13_or_older">13 years or older</string>
    <string name="age_under_13">Under 13 years old</string>
    <string name="and">and</string>
    <string name="androidPushNotificationClientId" />
    <string name="anyone_you_tag">Anyone you tag will get a special message notification.</string>
    <string name="api_version">v39.0</string>
    <string name="app_name">Jibo</string>
    <string name="app_package">com.salesforce.androidsdk.smartstore</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="as_a_jibo_owner">As a Jibo owner, deleting your account means:</string>
    <string name="avatar_set_failure">Something went wrong!</string>
    <string name="avatar_set_progress">"Setting Jibo' image"</string>
    <string name="avatar_set_success">Image set complete</string>
    <string name="back_to_tips_menu">Back to Tips menu</string>
    <string name="backup_passphrase">Passphrase</string>
    <string name="backup_restore_footer_hint">This may be different than your account password</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="brightness_hint">If Jibo is having trouble connecting, use this slider to adjust your screen brightness.</string>
    <string name="btnEnterNetworkManually">Manually enter network</string>
    <string name="btnSelectOtherNetwork">Change mobile Wi-Fi network</string>
    <string name="btnSend">Send</string>
    <string name="btnWiFiSettings">Select a Wi-Fi network</string>
    <string name="btn_edit_static_ip_options">STATIC IP OPTIONS</string>
    <string name="btn_show_static_ip_options">STATIC IP OPTIONS</string>
    <string name="button_add_email">ADD EMAIL</string>
    <string name="button_add_holidays">Add Jibo’s holidays</string>
    <string name="button_add_phone">Add Phone</string>
    <string name="button_add_phone_number">Add Phone Number</string>
    <string name="button_continue_deleting_account">Continue deleting account</string>
    <string name="button_create_account">Create Account</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="button_detailed_troubleshooting">Detailed troubleshooting</string>
    <string name="button_edit_wifi">EDIT WI-FI INFORMATION</string>
    <string name="button_get_support">Get support</string>
    <string name="button_help">Help</string>
    <string name="button_i_see_screen_above">I see that screen on Jibo</string>
    <string name="button_invite">INVITE</string>
    <string name="button_invite_loop_members_button">Invite people from contacts</string>
    <string name="button_lets_get_started">Get started</string>
    <string name="button_login">Log In</string>
    <string name="button_logout">LOG OUT</string>
    <string name="button_loop">Loop</string>
    <string name="button_mac_filtering">MAC Address filtering</string>
    <string name="button_media">Gallery</string>
    <string name="button_messages">Feed</string>
    <string name="button_next_code">Next Code</string>
    <string name="button_no_maybe_later">No, maybe later</string>
    <string name="button_open_email_app">Open Email App</string>
    <string name="button_permanently_delete_account">Permanently delete account</string>
    <string name="button_previous">Previous</string>
    <string name="button_reply">TAG BACK</string>
    <string name="button_resend_password_reset_email">RESEND EMAIL</string>
    <string name="button_resend_verification_email">RESEND VERIFICATION EMAIL</string>
    <string name="button_restart_wi_fi_setup">Restart Wi-Fi setup</string>
    <string name="button_return_to_settings">Return to settings</string>
    <string name="button_send_email_invite">Send Email Invite</string>
    <string name="button_support_error_1">My Jibo says “Can’t connect to Wi-Fi network”</string>
    <string name="button_support_error_2">My Jibo says “Can’t get IP address from router”</string>
    <string name="button_support_error_3">I got a different error message</string>
    <string name="button_support_error_4">Pointing my QR code at Jibo did nothing</string>
    <string name="button_try_again">Looks good, try again</string>
    <string name="change_email_current_password_footer1">"Please confirm your account by entering your current password. If you've forgotten your password you can reset it below."</string>
    <string name="change_email_current_password_reset_password">Reset Password</string>
    <string name="change_name_pronunciation">Change Name Pronunciation</string>
    <string name="current_password_error">Password is incorrect.</string>
    <string name="decline_to_answer">Decline to answer</string>
    <string name="guided_experience_avatar_text">"Jibo has a soft spot for the people he knows best. These people are called his Loop. His Loop is his family.

As Jibo’s owner, you’re the first person in his Loop. %1$s"</string>
    <string name="guided_experience_avatar_title">"Jibo's favorite people"</string>
    <string name="header_wi_fi_network_ssid_and_password">WI-FI NAME AND PASSWORD</string>
    <string name="hint_wifi_password">"'s Password"</string>
    <string name="hint_wifi_ssid">Network Name (SSID)</string>
    <string name="label_enter_ssid_pwd">"Jibo can't connect to your Wi-Fi, most likely because of an incorrect Wi-Fi name or password. Please check above, and correct any mistakes. If you still have issues, view our detailed troubleshooting steps."</string>
    <string name="login_invalid_password">"Sorry, this password isn't right. If you forgot your password, we can help reset it below."</string>
    <string name="loop_info_dialog_people_count_text">Jibo can recognize up to %1$s more people.</string>
    <string name="loop_info_dialog_text">The Loop is the people most special to Jibo, those he can recognize. To introduce someone new to Jibo, you can say: “Hey Jibo, meet…”</string>
    <string name="loop_invite_hint_date">Select a date</string>
    <string name="nickname_hint">Preferred Name</string>
    <string name="okay">Okay</string>
    <string name="passphrase_no_thanks">No Thanks</string>
    <string name="preferred_name_tip">If you want Jibo to call %s a different name, enter the preferred name above. Jibo needs every person in the Loop to have a different name, one that doesn’t sound like anyone else’s. For example, he’d be confused by Jenny and Ginny or Chris and Kris.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sf__app_service_host_labels_description">Used to specify login host labels for the application.</string>
    <string name="sf__app_service_hosts_description">Used to specify login hosts for the application.</string>
    <string name="sf__managed_app_callback_url_description">Used to specify OAuth callback URL for the application.</string>
    <string name="sf__managed_app_cert_alias_description">Used to specify the certificate alias required for the application.</string>
    <string name="sf__managed_app_oauth_id_description">Used to specify OAuth consumer key for the application.</string>
    <string name="sf__only_show_authorized_hosts_description">Used to specify that only authorized hosts can be shown.</string>
    <string name="sf__require_cert_auth_description">Used to specify if certificate based authentication is required for the application.</string>
    <string name="skip_for_now">Skip for Now</string>
    <string name="tell_jibo_to_use_a_different_name">Tell Jibo to use a different name</string>
    <string name="text_firstname">First Name</string>
    <string name="text_lastname">Last Name</string>
    <string name="text_support_info">"Sorry your Jibo isn't connecting. If you're having one of the above issues, click the link for quick help. If something else is giving you trouble, visit our support site. We'll be happy to get you set up."</string>
    <string name="text_their_name">Their Name</string>
    <string name="text_wifi_success_screen_info1">"Jibo will install updates and reboot a few times over the next 30-40 minutes. When he's ready, he'll look like the picture below. While you're waiting, tap the button below to learn about life with your new bot."</string>
    <string name="text_wifi_success_screen_title1">Jibo’s getting ready</string>
    <string name="textlink_learn_more_about_jibo">Get to know Jibo</string>
    <string name="they">They</string>
    <string name="title_confirm_password">Confirm Password</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="view_loop_members">View Loop Members</string>
</resources>