<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/colorBackgrounds" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.jibo.ui.view.proxima.CustomFontTextView android:id="@android:id/text1" android:text="@string/title_confirm_password" app:customFont="ProximaNova-Semibold.ttf" style="@style/SectionHeader" />
        <com.jibo.ui.view.proxima.CustomFontEditText android:id="@id/password" android:text="" android:hint="@string/prompt_password" android:inputType="textPassword" android:imeOptions="actionDone" style="@style/EditText" />
        <com.jibo.ui.view.proxima.CustomFontTextView android:id="@id/footer1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="0.0dp" android:text="@string/change_email_current_password_footer1" style="@style/SectionFooter" />
        <com.jibo.ui.view.proxima.CustomFontTextView android:textColor="@color/firecracker" android:id="@id/footer_error" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="0.0dp" android:text="@string/current_password_error" style="@style/SectionFooter" />
        <com.jibo.ui.view.proxima.CustomFontTextView android:id="@id/reset_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/default_padding" android:text="@string/change_email_current_password_reset_password" android:textAllCaps="true" app:customFont="ProximaNova-Semibold.ttf" style="@style/Button.FlatLinkButton" />
    </LinearLayout>
</ScrollView>
