<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/vertical_margin_20" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="0.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="250.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.jibo.ui.view.proxima.CustomFontTextView android:id="@android:id/title" android:paddingLeft="@dimen/default_padding" android:paddingRight="@dimen/default_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_your_loop" android:lineSpacingExtra="@dimen/default_padding" app:customFont="ProximaNova-Bold.otf" style="@style/Title" />
    <com.jibo.ui.view.proxima.CustomFontTextView android:id="@android:id/text1" android:paddingLeft="@dimen/default_padding" android:paddingRight="@dimen/default_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" android:text="@string/loop_info_dialog_text" style="@style/Body1.Steel" />
    <com.jibo.ui.view.proxima.CustomFontTextView android:id="@id/people_count" android:paddingLeft="@dimen/default_padding" android:paddingRight="@dimen/default_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_big_margin" android:text="@string/loop_info_dialog_people_count_text" style="@style/Body1.Steel" />
    <LinearLayout android:layout_gravity="right" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_big_margin">
        <com.jibo.ui.view.proxima.CustomFontTextView android:id="@id/btnCancel" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/passphrase_no_thanks" app:customFont="ProximaNova-Semibold.ttf" style="@style/Button.FlatLinkButton" />
        <com.jibo.ui.view.proxima.CustomFontTextView android:layout_gravity="bottom" android:id="@id/btnSet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/okay" app:customFont="ProximaNova-Semibold.ttf" style="@style/Button.FlatLinkButton" />
    </LinearLayout>
</LinearLayout>
