<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:background="@color/colorBackgrounds" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.jibo.ui.view.proxima.CustomFontTextView android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_their_name" app:customFont="ProximaNova-Semibold.ttf" style="@style/SectionHeader" />
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.jibo.ui.view.proxima.CustomFontAutoCompleteTextView android:id="@id/first_name" android:layout_width="0.0dp" android:text="" android:hint="@string/text_firstname" android:maxLength="32" android:layout_weight="0.5" android:inputType="textCapWords|textNoSuggestions" android:imeOptions="actionNext" style="@style/EditText" />
                <com.jibo.ui.view.proxima.CustomFontAutoCompleteTextView android:id="@id/last_name" android:layout_width="0.0dp" android:layout_marginLeft="1.0dp" android:text="" android:hint="@string/text_lastname" android:maxLength="32" android:layout_weight="0.5" android:inputType="textCapWords|textNoSuggestions" android:dropDownAnchor="@id/first_name" android:imeOptions="actionDone" style="@style/EditText" />
            </LinearLayout>
            <com.jibo.ui.view.proxima.CustomFontTextView android:id="@id/birthsday_title" android:layout_width="wrap_content" android:layout_height="wrap_content" app:customFont="ProximaNova-Semibold.ttf" style="@style/SectionHeader" />
            <RelativeLayout android:layout_gravity="center_vertical" android:layout_width="match_parent" android:layout_height="@dimen/default_list_item_height">
                <com.jibo.ui.view.proxima.CustomFontTextView android:textColor="@android:color/black" android:id="@id/date_text" android:hint="@string/loop_invite_hint_date" style="@style/Item" />
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/activity_horizontal_margin" android:src="@drawable/ic_arrow_drop_down" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/activity_horizontal_margin" />
            </RelativeLayout>
            <com.jibo.ui.view.proxima.CustomFontTextView android:id="@id/gender_title" android:layout_width="wrap_content" android:layout_height="wrap_content" app:customFont="ProximaNova-Semibold.ttf" style="@style/SectionHeader" />
            <RadioGroup android:id="@id/gender_group" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.jibo.ui.view.proxima.CustomFontRadioButton android:id="@id/radio_button_other" android:tag="other" android:text="@string/decline_to_answer" style="@style/Radio" />
                <com.jibo.ui.view.proxima.CustomFontRadioButton android:id="@id/radio_button_female" android:tag="female" android:text="@string/Female" style="@style/Radio" />
                <com.jibo.ui.view.proxima.CustomFontRadioButton android:id="@id/radio_button_male" android:tag="male" android:text="@string/Male" style="@style/Radio" />
                <com.jibo.ui.view.proxima.CustomFontRadioButton android:id="@id/radio_button_they" android:tag="they" android:text="@string/they" style="@style/Radio" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout android:id="@id/formNavigationPanel" android:background="@color/white" android:visibility="gone" android:clickable="true" android:layout_width="match_parent" android:layout_height="60.0dp" android:layout_alignParentBottom="true">
        <ImageButton android:id="@id/btnPrev" android:background="@drawable/white_button" android:padding="@dimen/tiny_padding_6dp" android:layout_width="30.0dp" android:layout_height="30.0dp" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:src="@drawable/ic_chevron_up" android:layout_centerVertical="true" android:rotation="-90.0" />
        <ImageButton android:id="@id/btnNext" android:background="@drawable/white_button" android:padding="@dimen/tiny_padding_6dp" android:layout_width="30.0dp" android:layout_height="30.0dp" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:src="@drawable/ic_chevron_up" android:layout_toRightOf="@id/btnPrev" android:layout_centerVertical="true" android:rotation="90.0" />
        <com.jibo.ui.view.proxima.CustomFontTextView android:id="@id/btnDone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/default_padding" android:text="@string/action_done" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/Button.FlatLinkButton" />
    </RelativeLayout>
</RelativeLayout>
