<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/colorBackgrounds" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.jibo.ui.view.proxima.CustomFontEditText android:textSize="@dimen/text_size_15sp" android:textColor="@android:color/black" android:textColorHint="@color/steel" android:id="@id/email" android:background="@android:color/white" android:layout_width="match_parent" android:layout_marginTop="@dimen/activity_big_margin" android:hint="@string/prompt_email" android:inputType="textEmailAddress" style="@style/EditText" />
    <com.jibo.ui.view.proxima.CustomFontEditText android:textSize="@dimen/text_size_15sp" android:textColor="@android:color/black" android:textColorHint="@color/steel" android:id="@id/password" android:background="@android:color/white" android:layout_width="match_parent" android:layout_marginTop="1.0dp" android:hint="@string/prompt_password" android:maxLines="1" android:singleLine="true" android:inputType="textPassword" android:imeOptions="actionDone" style="@style/EditText" />
    <com.jibo.ui.view.proxima.CustomFontTextView android:id="@id/validation_message_password" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginTop="10.0dp" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/login_invalid_password" style="@style/ErrorText" />
    <com.jibo.ui.view.proxima.CustomFontTextView android:id="@id/btnForgotPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_margin_small" android:layout_marginTop="@dimen/activity_margin_small" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/title_reset_password" app:customFont="ProximaNova-Semibold.ttf" style="@style/Button.FlatLinkButton" />
</LinearLayout>
