<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/white" android:paddingTop="@dimen/activity_double_vertical_margin" android:paddingBottom="@dimen/default_padding" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.jibo.ui.view.proxima.CustomFontTextView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/guided_experience_avatar_title" app:customFont="ProximaNova-Semibold.ttf" style="@style/Title" />
        <com.jibo.ui.view.proxima.CustomFontTextView android:gravity="center_horizontal" android:id="@id/txtInfo" android:layout_width="@dimen/button_min_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/vertical_margin_20" android:text="@string/guided_experience_avatar_text" style="@style/Body1" />
        <android.support.v7.widget.RecyclerView android:id="@android:id/list" android:scrollbars="none" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_padding" android:requiresFadingEdge="none" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
